# predictive_fishing_analytics

./: .gitignore  LICENSE  README.md  fishing_workshop_proposal.md  pyproject.toml  requirements.txt
backend/app/: main.py
data/: sample_training.json
frontend/: index.html
frontend/assets/css/: styles.css
frontend/assets/js/: app.js
