[tool.black]
line-length = 100
target-version = ["py313"]
include = "\.(py|pyi)$"

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = [
    "E203",  # whitespace before ':' (black compatible)
    "W503",  # line break before binary operator
]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".dist",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"


